# hanabi

./: .gitignore  .gitmodules  main.py  play_belief_mcts.py  play_game.py  pyproject.toml  run_training.sh
docs/: DISTRIBUTED_TRAINING.md
rl_hanabi/: __init__.py
rl_hanabi/belief/: belief_state.py
rl_hanabi/bot/: __init__.py  base_bot.py  belief_mcts_bot.py  bot.py  mcts_bot.py  random_bot.py  run_belief_mcts_bot.py  run_bot.py  run_mcts_bot.py
rl_hanabi/game/: game_types.py  hle_state.py  state.py
rl_hanabi/mcts/: __init__.py  belief_mcts.py  convention_rollout.py  mcts  mcts.py
rl_hanabi/model/: belief_model.py
rl_hanabi/training/: __init__.py  config.toml  data_collection.py  distributed_config.example.toml  game_simulator.py  mcts_simulator.py  train.py  trainer.py
rl_hanabi/training/distributed/: __init__.py  coordinator.py  gpu_client.py  gpu_server.py  protocol.py
scripts/: hanabi-ctl  monitor.py  run_coordinator.sh  run_gpu_server.sh  run_with_config.py  setup_laptop.sh  setup_server.sh
systemd/: hanabi-bot.service  hanabi-coordinator.env.example  hanabi-coordinator@.service  hanabi-gpu-server.env.example  hanabi-gpu-server@.service
